--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -16,8 +16,7 @@ jobs:
     steps:
       - uses: lowlighter/metrics@master
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.MY_GITHUB_TOKEN  }}
           base: header, repositories
           config_padding: 0%
           plugin_isocalendar: yes
